# easyFFT-rust

./: .gitmodules  Cargo.toml  build.rs  easyFFT.lib
benches/: benchmark_fft.rs
src/: bindings.rs  error.rs  lib.rs
