[package]
name = "easyFFT-rust"
version = "0.1.0"
edition = "2021"
links="easyFFT"

[lib]
name = "easy_fft_rust"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num="0"
ndarray = "0"
ndarray-stats = "0"

[build-dependencies]
bindgen="0"
cmake = "0"
