[package]
name = "easyfft"
version = "0.0.14"
edition = "2021"
links="easyFFT"

[lib]
name="easyfft_binding"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num="0"
ndarray = "0"
ndarray-stats = "0"

[build-dependencies]
bindgen="0"
cmake = "0"
