[package]
name = "easyfft"
version = "0.0.19"
edition = "2021"
links="easyFFT"

[lib]
name="easyfft_binding"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cl = []

[dependencies]
num="0"
libc = "0"

[dev-dependencies]
rand = "*"
criterion = "0.3"

[[bench]]
name = "benchmark_fft"
harness = false

[build-dependencies]
bindgen="0"
cmake = "0"
